RESOLVED FIXED137177
[ATK] WebKitAccessibleWrapperAtk should not depend on GTK
https://bugs.webkit.org/show_bug.cgi?id=137177
Summary [ATK] WebKitAccessibleWrapperAtk should not depend on GTK
Carlos Garcia Campos
Reported 2014-09-27 06:37:53 PDT
It's used to get the web view widget, but there's no GtkWidget in the web process and platformPageClient is always NULL.
Attachments
Patch (5.12 KB, patch)
2014-09-27 06:41 PDT, Carlos Garcia Campos
mrobinson: review+
Carlos Garcia Campos
Comment 1 2014-09-27 06:41:51 PDT
Carlos Garcia Campos
Comment 2 2014-09-28 01:18:20 PDT
Note You need to log in before you can comment on or make changes to this bug.