[ATK] WebKitAccessibleWrapperAtk should not depend on GTK https://bugs.webkit.org/show_bug.cgi?id=137177

Reviewed by Martin Robinson.

It's used to get the web view widget, but there's no GtkWidget in
the web process and platformPageClient is always NULL.

* PlatformGTK.cmake: Move accessibility sources to the WebCore
sources list.
* accessibility/atk/WebKitAccessibleWrapperAtk.cpp:
(atkParentOfRootObject): Remove code to get view GtkWidget.
* editing/atk/FrameSelectionAtk.cpp: Remove unneeded header include.

Canonical link: https://commits.webkit.org/154990@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174043 268f45cc-cd09-0410-ab3c-d52691b4dbfc